# euro_bakshish

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.txt  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.test  ENTRYPOINT_FIX_VERIFICATION.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NEXTPY_STATUS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  SOLUTION_SUMMARY.md  TRANSFORMATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  euro_bakshish_app.py  euro_bakshish_app.py.backup  euro_bakshish_simple.py  package.json  pyproject.toml  requirements-dev.txt  requirements-nextpy.txt  test_nextpy_app.py  validate-docker-setup.sh
.github/workflows/: backend-tests.yml  ci.yml  docker-tests.yml  e2e-tests.yml  frontend-tests.yml  nextpy-tests.yml  pre-commit.yml
android/: README.md  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  manage.py  pytest.ini  requirements.txt
backend/apps/ratings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/ratings/migrations/: 0001_initial.py
backend/apps/trips/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/euro_bakshish/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md  CI_CD.md  DOCKER.md  DOCKER_CI_REVIEW.md  QUICK_START_GUIDE.md  SECURITY.md  SETUP.md  USER_TUTORIAL.md
docs/developer-notes/: google-maps-and-email.md
docs/images/: README.md
tests/: conftest.py  test_docker.py  test_integration.py  test_models.py
web/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.js
web/src/components/: NavBar.js  PrivateRoute.js
web/src/pages/: Dashboard.js  Login.js  Profile.js  Register.js  TripHistory.js  TripPlanner.js
web/src/redux/store/: store.js
web/src/services/: api.js  services.js
(+12 files in other folders)
